--- a/root-config/package.json
+++ b/root-config/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@sumit/root-config",
+  "name": "@glove-wizard/root-config",
   "scripts": {
-    "start": "webpack serve --port 9000 --env isLocal",
+    "start": "webpack  serve --port 9000 --hot  --env isLocal",
     "lint": "eslint src --ext js,ts,tsx",
     "test": "cross-env BABEL_ENV=test jest --passWithNoTests",
     "format": "prettier --write .",
@@ -46,5 +46,5 @@
     "@types/webpack-env": "^1.16.2",
     "single-spa-layout": "^1.6.0"
   },
-  "types": "dist/sumit-root-config.d.ts"
+  "types": "dist/root-config.d.ts"
 }
