--- a/header-react/tsconfig.json
+++ b/header-react/tsconfig.json
@@ -4,7 +4,7 @@
     "jsx": "react-jsx",
     "declarationDir": "dist"
   },
-  "files": ["src/sumit-header-react.tsx"],
+  "files": ["src/glove-wizard-header-react.tsx"],
   "include": ["src/**/*"],
   "exclude": ["src/**/*.test*"]
 }
